updated for XDI2 0.8-SNAPSHOT